refactor: reorganize folder structure to io.github.dinamo541.corefx and translate project to English